# servant-generic

./: .gitignore  .travis.yml  LICENSE  README.md  default.nix  servant-generic.cabal  servant-generic.nix  stack.yaml
examples/: Basic.hs
src/Servant/: Generic.hs
