name:                servant-generic
version:             0.1.0.2
synopsis:            Specify Servant APIs with records.
description:         Specify Servant APIs with records instead of @:\<|\>@ trees. See the <https://github.com/chpatrick/servant-generic/blob/master/README.md#tldr README> for more information.
license:             MIT
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
copyright:           2017 Patrick Chilton
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/chpatrick/servant-generic.git

library
  exposed-modules:     Servant.Generic
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.12,
                       servant >= 0.7.1,
                       servant-server >= 0.7.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite example-basic
  type:                exitcode-stdio-1.0
  main-is:             examples/Basic.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.12,
                       servant >= 0.7.1,
                       servant-server >= 0.7.1,
                       servant-generic,
                       text,
                       warp,
                       network-uri
